k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: indostar-naturals
  labels:
    name: indostar-naturals
    environment: production
